--- a/Projeto/proposta/proposta.tex
+++ b/Projeto/proposta/proposta.tex
@@ -97,7 +97,7 @@ CPS767 – \textit{Algoritmos de Monte Carlo e Cadeias de Markov}\\
 
 \end{center}
 
-\textbf{Projeto:} Planejamento Dinâmico de Rotas para VANTs com Inserção Condicional de Alvos
+\textbf{Proposta de Projeto:} Planejamento Dinâmico de Rotas para VANTs em Patrulha Naval
 
 \vspace{1em}
 \hrule
@@ -105,14 +105,26 @@ CPS767 – \textit{Algoritmos de Monte Carlo e Cadeias de Markov}\\
 
 
 \section{Motivação}
+A crescente adoção de Veículos Aéreos Não Tripulados (VANTs) em operações de vigilância marítima exige métodos mais robustos de planejamento de rotas, especialmente em cenários com alvos parcialmente conhecidos e detecção sensorial sujeita a limitações práticas. Trabalhos anteriores mostram que a vigilância baseada em varredura aérea pode ser modelada como uma variação do Problema do Caixeiro Viajante (TSP), incorporando restrições operacionais como autonomia limitada, sensores com alcances distintos e alvos móveis ou parcialmente observáveis \cite{marlow_2007}. Técnicas de otimização como o \textit{simulated annealing} têm se mostrado eficazes em problemas de roteamento com grande espaço de busca e múltiplos mínimos locais, sendo uma escolha promissora para o replanejamento progressivo de trajetos em ambientes com inserção dinâmica de alvos \cite{kosmas_2012}. Mais recentemente, abordagens com replanejamento dinâmico em tempo real vêm sendo propostas para garantir a cobertura de alvos não detectados ou mal inspecionados, especialmente em aplicações com VANTs e sensores embarcados \cite{penicka_2017}. Motivado por esses avanços, este trabalho propõe uma formulação adaptada do TSP para missões de patrulha marítima com inserção condicional de novos alvos, levando em conta restrições de distância lateral, autonomia do VANT e alcance heterogêneo de sensores.
 
 \section{Objetivo}
+O objetivo deste trabalho é desenvolver uma metodologia para o planejamento dinâmico de rotas de VANTs em missões de vigilância marítima, considerando a detecção progressiva de alvos ao longo do percurso. A proposta visa adaptar o Problema do Caixeiro Viajante (TSP) a um contexto em que novos pontos de interesse são identificados durante a missão e a decisão de incluí-los no trajeto deve considerar restrições operacionais e de sensoriamento. A solução deve permitir o replanejamento eficiente da rota de forma a maximizar a inspeção de alvos relevantes, respeitando os limites de autonomia da aeronave.
 
 \section{Metodologia}
+A metodologia proposta consiste na varredura da área marítima por um VANT que percorre linhas paralelas, com waypoints pré-definidos. O VANT está equipado com sensores de detecção, incluindo um radar com alcance \( R_{\text{radar}} \) e uma câmera de identificação visual com alcance \( R_{\text{câmera}} \), ambos tratados como parâmetros configuráveis. Durante o voo, sempre que o radar detecta um novo navio, é calculado o ponto de interseção entre a linha reta que liga o VANT ao navio e a circunferência de raio \( R_{\text{câmera}} \) centrada no navio — esse ponto é considerado um \textit{vértice candidato} no grafo de inspeção.
+
+Contudo, para evitar grandes desvios do padrão de varredura, esse ponto só é efetivamente adicionado se a distância perpendicular entre o navio e a linha paralela atualmente seguida pelo VANT for inferior a uma distância configurável \(d\). Essa restrição evita que o VANT se afaste excessivamente do percurso principal para inspecionar alvos muito distantes lateralmente.
+
+À medida que novos vértices são inseridos, o problema de roteamento é resolvido incrementalmente por meio do algoritmo de \textit{Simulated Annealing}, uma metaheurística eficaz para encontrar boas soluções aproximadas em instâncias complexas do Problema do Caixeiro Viajante. O objetivo é minimizar a distância total percorrida, respeitando a autonomia máxima do VANT e maximizando o número de alvos inspecionados de acordo com os critérios definidos.
+
+Como simplificação, assume-se que os navios estão estáticos durante a missão, dada a superioridade da velocidade do VANT em relação às embarcações. Essa modelagem permite representar o problema como um TSP com inserção condicional de vértices em tempo de missão.
 
 
-% \bibliographystyle{abntex2-num} % Escolha o estilo de citação desejado
-% \nocite{sutton2018reinforcement}
-% \bibliography{bibliografia} % Nome do arquivo .bib (sem a extensão)
+\section{Resultados Esperados}
+Espera-se, com essa abordagem, obter um modelo que equilibre eficiência de cobertura com esforço computacional, além de fornecer uma solução aplicável em cenários operacionais reais. A contribuição principal está na integração de critérios práticos de operação com modelos clássicos de otimização, promovendo maior aderência do TSP a situações reais de patrulhamento com VANTs.
+
+
+\bibliographystyle{abntex2-num}
+\bibliography{bibliografia}
 
 \end{document}
