Melhoria na proposta e elabobração da apresentação

--- a/Projeto/proposta/bibliografia.bib
+++ b/Projeto/proposta/bibliografia.bib
@@ -27,3 +27,15 @@
   organization={IEEE},
   doi={10.1109/IROS.2017.8202314}
 }
+
+@techreport{andrade_2021,
+  title={Blue Amazon Management System (SisGAAz): Sovereignty, Surveillance and Defense of the Brazilian Jurisdictional Waters},
+  author={Andrade, Israel de Oliveira and Rocha, Ant\^onio Jorge Ramalho da and Franco, Luiz Gustavo Aversa},
+  institution={Institute for Applied Economic Research (Ipea)},
+  type={Discussion Paper},
+  number={261},
+  year={2021},
+  address={Brasília},
+  url={https://www.ipea.gov.br/portal/images/stories/PDFs/TDs/ingles/dp\_261\_sisgaaz.pdf}
+}
+
