melhoria na proposta

--- a/Projeto/proposta/proposta.tex
+++ b/Projeto/proposta/proposta.tex
@@ -114,7 +114,7 @@ Mais recentemente, abordagens com replanejamento dinâmico em tempo real vêm se
 \begin{figure}[H]
     \centering
     \includegraphics[width=0.6\textwidth]{fig/vant.png}
-    \caption{Cenário de vigilância marítima.}
+    \caption{Patrulha naval realizada por aeronave.}
 
     \small
     \textbf{Fonte:} Marlow et al 2007 \cite{marlow_2007}.
