--- a/Lista_4/lista_4.tex
+++ b/Lista_4/lista_4.tex
@@ -56,6 +56,7 @@
 \newenvironment{resposta}
     {\begin{respostabox@inner}
     \setlength{\parindent}{2em}~
+    \par
     }
   {\end{respostabox@inner}}
 
